--- a/project.html
+++ b/project.html
@@ -126,18 +126,26 @@
               </section>
 
               <section class="section-card">
-                <h2>Beta 안내</h2>
-                <p>
-                  ⚠️ 현재 Project.PAW는 <b>실험 단계</b>입니다.<br/>
-                  후원은 카카오톡 단톡방을 통해 이루어지며, 관리자가 매일 수동으로 모금액과 참여자 수를 업데이트합니다.<br/>
-                  정식 서비스에서는 PG 결제를 통한 자동화된 투명 시스템이 제공될 예정입니다.
-                </p>
-                <p>
-                  🐾 Project.PAW에 등록되는 프로젝트는 <b>실제 구조와 영수증으로 증빙 가능한 케이스</b>만 포함됩니다.<br/>
-                  구조자의 용기에 후원자들의 마음이 더해질 때, 그 따뜻한 연결은 또 다른 용기를 낳습니다.<br/>
-                  우리는 이렇게 작은 용기들이 파도를 만들고, 사회 전체의 연결된 마음의 파이를 키워가는 과정을 추구합니다.
-                </p>
-              </section>
+  <h2>Beta 안내</h2>
+  <p>
+    ⚠️ 현재 Project.PAW는 <b>실험 단계</b>입니다.<br/>
+    후원은 카카오톡 단톡방을 통해 이루어지며,<br/>
+    관리자가 매일 수동으로 모금액과 참여자 수를 업데이트합니다.<br/>
+    정식 서비스에서는 PG 결제를 통한<br/>
+    자동화된 투명 시스템이 제공될 예정입니다.
+  </p>
+  <p style="margin-top:18px">
+    🐾 Project.PAW에 등록되는 프로젝트는<br/>
+    <b>실제 구조와 영수증으로 증빙 가능한 케이스</b>만 포함됩니다.<br/><br/>
+
+    구조자의 <b>용기</b>에 후원자들의 <b>마음</b>이 더해질 때,<br/>
+    그 따뜻한 연결은 또 다른 용기를 낳습니다.<br/><br/>
+
+    작은 용기들이 모여 파도를 만들고,<br/>
+    사회 전체의 <b>연결된 마음의 파이</b>를 키워가는 것,<br/>
+    그것이 Project.PAW가 추구하는 가치입니다.
+  </p>
+</section>
             </div>
             <div>
               <div class="paw-panel">
