--- a/project.html
+++ b/project.html
@@ -29,8 +29,8 @@
       .paw-grid{display:flex;flex-direction:column;}
       .block.photo{order:1;}
       .block.headline{order:2;}
-      .block.status{order:3;}
-      .block.story{order:4;}
+      .block.story{order:3;}       /* 스토리 먼저 */
+      .block.status{order:4;}      /* 진행현황은 스토리 아래 */
       .block.beta{order:5;}
       .block.value{order:6;}
     }
