--- a/project.html
+++ b/project.html
@@ -21,16 +21,18 @@
 
     /* 레이아웃 */
     .paw-grid{display:grid;gap:20px}
-    @media(min-width:992px){.paw-grid{grid-template-columns:1.2fr 0.8fr}}
+    @media(min-width:992px){
+      .paw-grid{grid-template-columns:1.2fr 0.8fr}
+    }
 
-    /* 모바일 블록 순서 */
+    /* 모바일 전용 순서 */
     .block{order:unset;}
     @media(max-width:768px){
       .paw-grid{display:flex;flex-direction:column;}
       .block.photo{order:1;}
       .block.headline{order:2;}
-      .block.story{order:3;}       /* 스토리 먼저 */
-      .block.status{order:4;}      /* 진행현황은 스토리 아래 */
+      .block.story{order:3;}
+      .block.status{order:4;}
       .block.beta{order:5;}
       .block.value{order:6;}
     }
@@ -107,9 +109,13 @@
         const rate=goal?Math.floor(current/goal*100):0;
 
         $detail.innerHTML=`
+          <section class="paw-head block headline">
+            <h1 class="big-title">${p.name??'(이름 없음)'}</h1>
+          </section>
           <div class="paw-grid">
-            <!-- 사진 -->
+            <!-- 좌측 -->
             <div class="block photo">
+              <!-- 캐러셀 -->
               <div id="carouselProject" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   ${imgs.map((url,i)=>`
@@ -127,16 +133,46 @@
               <div class="thumb-strip">
                 ${imgs.map((url,i)=>`<img src="${url}" data-index="${i}" class="${i===0?'active':''}"/>`).join('')}
               </div>
-            </div>
 
-            <!-- 헤드문구 -->
-            <div class="block headline">
-              <section class="paw-head">
-                <h1 class="big-title">${p.name??'(이름 없음)'}</h1>
+              <!-- 스토리 -->
+              <section class="section-card block story">
+                <h2>스토리</h2>
+                ${p.summary?`<p style="color:#555">${p.summary}</p>`:''}
+                ${p.keyMessage?`<p style="font-weight:700;color:#E87722">❝ ${p.keyMessage} ❞</p>`:''}
+                <p>${formatDescription(p.description)}</p>
+              </section>
+
+              <!-- Beta 안내 -->
+              <section class="section-card block beta">
+                <h2>Beta 안내</h2>
+                <p>
+                  ⚠️ 현재 Project.PAW는 <b>실험 단계</b>입니다.<br/>
+                  후원은 카카오톡 단톡방을 통해 이루어지며,<br/>
+                  관리자가 매일 수동으로 모금액과 참여자 수를 업데이트합니다.<br/>
+                  정식 서비스에서는 PG 결제를 통한<br/>
+                  자동화된 투명 시스템이 제공될 예정입니다.
+                </p>
+              </section>
+
+              <!-- 우리가 추구하는 가치 -->
+              <section class="section-card block value">
+                <h2>우리가 추구하는 가치</h2>
+                <p>
+                  🐾 Project.PAW에 등록되는 프로젝트는<br/>
+                  <b>실제 구조와 영수증으로 증빙 가능한 케이스</b>만 포함됩니다.
+                </p>
+                <p>
+                  구조자의 용기에 후원자들의 마음이 더해질 때,<br/>
+                  그 따뜻한 연결은 또 다른 용기를 낳습니다.
+                </p>
+                <p>
+                  작은 용기들이 모여 파도를 만들고,<br/>
+                  사회 전체의 <b>연결된 마음의 파이</b>를 키워가는 것,<br/>
+                  그것이 Project.PAW가 추구하는 가치입니다.
+                </p>
               </section>
             </div>
-
-            <!-- 진행현황 -->
+            <!-- 우측 -->
             <div class="block status">
               <div class="paw-panel">
                 <h2>진행 현황</h2>
@@ -160,50 +196,6 @@
                     📌 관리자 한마디: ${p.adminMessage}
                   </div>`:''}
               </div>
-            </div>
-
-            <!-- 스토리 -->
-            <div class="block story">
-              <section class="section-card">
-                <h2>스토리</h2>
-                ${p.summary?`<p style="color:#555">${p.summary}</p>`:''}
-                ${p.keyMessage?`<p style="font-weight:700;color:#E87722">❝ ${p.keyMessage} ❞</p>`:''}
-                <p>${formatDescription(p.description)}</p>
-              </section>
-            </div>
-
-            <!-- Beta 안내 -->
-            <div class="block beta">
-              <section class="section-card">
-                <h2>Beta 안내</h2>
-                <p>
-                  ⚠️ 현재 Project.PAW는 <b>실험 단계</b>입니다.<br/>
-                  후원은 카카오톡 단톡방을 통해 이루어지며,<br/>
-                  관리자가 매일 수동으로 모금액과 참여자 수를 업데이트합니다.<br/>
-                  정식 서비스에서는 PG 결제를 통한<br/>
-                  자동화된 투명 시스템이 제공될 예정입니다.
-                </p>
-              </section>
-            </div>
-
-            <!-- 우리가 추구하는 가치 -->
-            <div class="block value">
-              <section class="section-card">
-                <h2>우리가 추구하는 가치</h2>
-                <p>
-                  🐾 Project.PAW에 등록되는 프로젝트는<br/>
-                  <b>실제 구조와 영수증으로 증빙 가능한 케이스</b>만 포함됩니다.
-                </p>
-                <p>
-                  구조자의 용기에 후원자들의 마음이 더해질 때,<br/>
-                  그 따뜻한 연결은 또 다른 용기를 낳습니다.
-                </p>
-                <p>
-                  작은 용기들이 모여 파도를 만들고,<br/>
-                  사회 전체의 <b>연결된 마음의 파이</b>를 키워가는 것,<br/>
-                  그것이 Project.PAW가 추구하는 가치입니다.
-                </p>
-              </section>
             </div>
           </div>
         `;
