--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Project.PAW — 개인과 개인을 잇는 후원 플랫폼</title>
+  <title>Project.PAW — Project.PAW는 개인 구조자와 후원자가 직접 연결되는 작은 실험입니다.
+숫자보다 중요한 건 ‘연결된 마음’이고,
+그 마음이 행동으로 이어질 수 있도록 돕고 싶습니다.</title>
   <link rel="stylesheet" href="common.css"/>
   <link rel="stylesheet" href="app.min.css"/>
   <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet" />
