--- a/project.html
+++ b/project.html
@@ -1,142 +1,270 @@
-<!-- Project.PAW — 안전 패치 (BETA 제거 · 가치문구 교체 · 계좌 팝업) -->
-<style>
-  /* 모달(독립 스타일) */
-  .paw-modal{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:rgba(0,0,0,.45);z-index:9999}
-  .paw-modal[hidden]{display:none}
-  .paw-dialog{position:relative;background:#fff;border-radius:16px;max-width:520px;width:92%;padding:24px 20px;box-shadow:0 10px 40px rgba(0,0,0,.2);
-    font-family:'SUIT Variable','Pretendard',system-ui,sans-serif}
-  .paw-dialog h3{margin:0 0 12px;font-size:20px;font-weight:800}
-  .paw-acc{display:flex;gap:8px;align-items:center;justify-content:space-between;background:#f5f5f5;border-radius:12px;padding:12px}
-  .paw-acc code{font-size:16px;font-weight:800;word-break:keep-all}
-  .paw-copy{border:0;border-radius:10px;padding:8px 12px;cursor:pointer}
-  .paw-close{border:0;background:transparent;font-size:28px;line-height:1;cursor:pointer;position:absolute;top:8px;right:12px}
-  .paw-donor-msg{margin:12px 2px 0;font-size:14px;color:#333}
-  .paw-hint{margin:4px 2px 0;font-size:12px;color:#666}
-  .paw-toast{position:absolute;bottom:12px;left:50%;transform:translateX(-50%);background:#111;color:#fff;border-radius:999px;padding:6px 12px;font-size:12px}
-</style>
+<!doctype html>
+<html lang="ko">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>프로젝트 상세 - Project.PAW</title>
+  <link rel="stylesheet" href="common.css"/>
+  <link rel="stylesheet" href="app.min.css"/>
+  <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <style>
+    :root{--ink:#111;--sub:#555;--accent:#E87722;--line:#eaeaea;--bg:#fafafa}
+    body{margin:0;background:var(--bg);color:var(--ink);
+      font-family:'SUIT Variable','Pretendard','Inter',system-ui,sans-serif}
+    .wrap{max-width:1100px;margin:0 auto;padding:20px 16px}
 
-<!-- 계좌번호 모달 -->
-<div class="paw-modal" id="pawAccModal" hidden>
-  <div class="paw-dialog" role="dialog" aria-modal="true" aria-labelledby="pawAccTitle">
-    <button class="paw-close" aria-label="닫기">&times;</button>
-    <h3 id="pawAccTitle">후원 계좌</h3>
-    <div class="paw-acc">
-      <code class="paw-acc-num">계좌번호 : KB국민 831801-04-173073 프로젝트파우</code>
-      <button type="button" class="paw-copy">복사</button>
-    </div>
-    <p class="paw-donor-msg">보내주신 마음 100% 후원자에게 Direct로 전달됩니다</p>
-    <p class="paw-hint">입금 후 단톡방에 간단히 인증해주시면 ‘연결된 마음 수’에 반영됩니다.</p>
-    <div class="paw-toast" hidden>복사되었습니다</div>
-  </div>
-</div>
+    /* 헤드라인 */
+    .paw-head{background:#fff;border:1px solid var(--line);border-radius:14px;
+      padding:40px 20px;margin:40px 0;text-align:center}
+    .paw-head .big-title{font-size:2.4rem;font-weight:900;color:var(--ink)}
 
-<script>
-document.addEventListener('DOMContentLoaded', function () {
-  /* ---------------------------
-   * (1) BETA 블록 제거 (보수적 탐지)
-   * --------------------------- */
-  (function removeBeta() {
-    // 먼저 흔한 id/class 시도
-    const candidates = ['#betaBlock','#beta-block','#betaBanner','#beta-badge','.beta','.banner-beta','.paw-beta'];
-    for (const sel of candidates) {
-      const el = document.querySelector(sel);
-      if (el) { el.remove(); return; }
+    /* 레이아웃 */
+    .paw-grid{display:grid;gap:20px}
+    @media(min-width:992px){
+      .paw-grid{grid-template-columns:1.2fr 0.8fr}
     }
-    // 텍스트 기반(‘BETA’, ‘실험 중’)인 가장 가까운 블록 제거
-    const walker = document.createTreeWalker(document.body, NodeFilter.SHOW_ELEMENT);
-    while (walker.nextNode()) {
-      const el = walker.currentNode;
-      if (!el || !el.textContent) continue;
-      const t = el.textContent.trim();
-      if (/^\s*(BETA|베타)\s*$/i.test(t) || t.includes('아직은 실험 중') || t.includes('BETA')) {
-        const block = el.closest('section,div,aside,header,footer') || el;
-        block.remove();
-        return;
+
+    /* 모바일 전용 순서 */
+    .block{order:unset;}
+    @media(max-width:768px){
+      .paw-grid{display:flex;flex-direction:column;}
+      .block.photo{order:1;}
+      .block.headline{order:2;}
+      .block.story{order:3;}
+      .block.status{order:4;}
+      /* .block.beta 제거됨 */
+      .block.value{order:5;}
+    }
+
+    /* 캐러셀 */
+    .carousel-inner img{height:380px;object-fit:cover}
+    .thumb-strip{display:flex;gap:8px;overflow-x:auto;padding:10px;background:#fafafa;margin-top:6px}
+    .thumb-strip img{height:70px;width:70px;object-fit:cover;border-radius:8px;cursor:pointer;
+      border:2px solid transparent;flex-shrink:0}
+    .thumb-strip img.active{border-color:var(--accent)}
+
+    /* 우측 현황 */
+    .paw-panel{background:#fff;border:1px solid var(--line);border-radius:14px;padding:20px}
+    @media(min-width:992px){.paw-panel{position:sticky;top:20px}}
+    .paw-panel h2{font-size:1.1rem;font-weight:900;color:var(--accent);margin-bottom:14px}
+    .paw-kv{border:1px solid var(--line);border-radius:10px;padding:12px;margin-bottom:12px;text-align:center}
+    .paw-kv .k{font-size:.9rem;color:var(--sub)}
+    .paw-kv .v{margin-top:4px;font-weight:900}
+    .paw-kv .v.big{font-size:1.4rem;color:var(--ink)}
+
+    /* 버튼 */
+    .btn-kakao{display:block;width:100%;background:#FEE500;color:#111;padding:14px 18px;
+      border-radius:12px;font-weight:700;font-size:1.05rem;text-align:center;text-decoration:none;margin-top:10px}
+    .btn-kakao:hover{background:#e5d200}
+    .btn-share{display:block;width:100%;background:#6b7280;color:#fff;padding:14px 18px;
+      border-radius:12px;font-weight:700;font-size:1.05rem;text-align:center;text-decoration:none;margin-top:10px}
+    .btn-share:hover{background:#555}
+
+    /* 본문 카드 */
+    .section-card{background:#fff;border-radius:16px;padding:28px;margin-top:22px;
+      box-shadow:0 4px 10px rgba(0,0,0,0.05)}
+    .section-card h2{font-size:1.3rem;font-weight:800;margin-bottom:14px;color:var(--accent)}
+    .section-card p{font-size:1.05rem;line-height:1.7;color:var(--ink)}
+
+    /* ===== 후원 계좌 모달 ===== */
+    .paw-modal{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;
+      background:rgba(0,0,0,.45);z-index:9999}
+    .paw-modal[hidden]{display:none}
+    .paw-dialog{position:relative;background:#fff;border-radius:16px;max-width:520px;width:92%;
+      padding:24px 20px;box-shadow:0 10px 40px rgba(0,0,0,.2)}
+    .paw-dialog h3{margin:0 0 12px;font-size:20px;font-weight:800}
+    .paw-acc{display:flex;gap:8px;align-items:center;justify-content:space-between;background:#f5f5f5;
+      border-radius:12px;padding:12px}
+    .paw-acc code{font-size:16px;font-weight:800;word-break:keep-all}
+    .paw-copy{border:0;border-radius:10px;padding:8px 12px;cursor:pointer}
+    .paw-close{border:0;background:transparent;font-size:28px;line-height:1;cursor:pointer;position:absolute;top:8px;right:12px}
+    .paw-donor-msg{margin:12px 2px 0;font-size:14px;color:#333}
+    .paw-hint{margin:4px 2px 0;font-size:12px;color:#666}
+    .paw-toast{position:absolute;bottom:12px;left:50%;transform:translateX(-50%);
+      background:#111;color:#fff;border-radius:999px;padding:6px 12px;font-size:12px}
+    .paw-toast[hidden]{display:none}
+  </style>
+</head>
+<body>
+  <div data-include="header"></div>
+  <main class="wrap">
+    <div id="project-detail"><div class="muted">불러오는 중...</div></div>
+  </main>
+  <div data-include="footer"></div>
+
+  <!-- 후원 계좌 모달 -->
+  <div class="paw-modal" id="pawAccModal" hidden>
+    <div class="paw-dialog" role="dialog" aria-modal="true" aria-labelledby="pawAccTitle">
+      <button class="paw-close" aria-label="닫기">&times;</button>
+      <h3 id="pawAccTitle">후원 계좌</h3>
+      <div class="paw-acc">
+        <code class="paw-acc-num">계좌번호 : KB국민 831801-04-173073 프로젝트파우</code>
+        <button type="button" class="paw-copy">복사</button>
+      </div>
+      <p class="paw-donor-msg">보내주신 마음 100% 후원자에게 Direct로 전달됩니다</p>
+      <p class="paw-hint">입금 후 단톡방에 간단히 인증해주시면 ‘연결된 마음 수’에 반영됩니다.</p>
+      <div class="paw-toast" id="pawToast" hidden>복사되었습니다</div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="module">
+    import { injectLayout } from './js/include.js';
+    import { getProjectById } from './js/api.js';
+    import { storage } from './js/firebase.js';
+    import { ref, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-storage.js";
+
+    injectLayout({ active:'project' });
+    const $detail=document.getElementById('project-detail');
+    const fmt=n=>Number(n||0).toLocaleString('ko-KR');
+
+    function candidatesOf(p){const out=[];const push=v=>{if(typeof v==='string'&&v.trim())out.push(v.trim());};
+      ['representativeImageUrl','coverUrl','mainImageUrl','thumbnailUrl','image'].forEach(k=>push(p[k]));
+      ['galleryUrls','images','photos','files','receiptUrls'].forEach(k=>{
+        const arr=p[k];if(Array.isArray(arr))arr.forEach(it=>{if(typeof it==='string') push(it);else if(it&&(it.url||it.path)) push(it.url||it.path);});
+      });return out;}
+    async function toHttpUrl(raw){if(!raw) return null;let v=String(raw).trim();if(/^(https?:|data:|blob:)/i.test(v)) return v;
+      if(v.startsWith('/')) v=v.slice(1);try{return await getDownloadURL(ref(storage,v));}catch{return null;}}
+    async function galleryHttpUrls(p){const cands=candidatesOf(p);const urls=await Promise.all(cands.map(toHttpUrl));
+      const uniq=[],seen=new Set();for(const u of urls){if(u&&!seen.has(u)){seen.add(u);uniq.push(u);} }
+      return uniq.length?uniq:['img/placeholder.svg'];}
+    function getId(){return new URLSearchParams(location.search).get("id");}
+    function formatDescription(text){if(!text) return '';return text.replace(/\n/g,'<br/>');}
+
+    async function render(){
+      const id=getId(); if(!id){$detail.innerHTML='<div class="muted">잘못된 접근입니다.</div>';return;}
+      try{
+        const p=await getProjectById(id); if(!p){$detail.innerHTML='<div class="muted">존재하지 않는 프로젝트입니다.</div>';return;}
+        const imgs=await galleryHttpUrls(p);
+        const goal=Number(p.goalAmount||0);
+        const current=Number(p.currentAmount||0);
+        const rate=goal?Math.floor(current/goal*100):0;
+
+        $detail.innerHTML=`
+          <section class="paw-head block headline">
+            <h1 class="big-title">\${p.name??'(이름 없음)'}</h1>
+          </section>
+          <div class="paw-grid">
+            <!-- 좌측 -->
+            <div class="block photo">
+              <!-- 캐러셀 -->
+              <div id="carouselProject" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  ${'${'}imgs.map((url,i)=>`
+                    <div class="carousel-item \${i===0?'active':''}">
+                      <img src="\${url}" class="d-block w-100" alt="img\${i}">
+                    </div>`).join('')${'}'}
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselProject" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselProject" data-bs-slide="next">
+                  <span class="carousel-control-next-icon"></span>
+                </button>
+              </div>
+              <div class="thumb-strip">
+                ${'${'}imgs.map((url,i)=>`<img src="\${url}" data-index="\${i}" class="\${i===0?'active':''}"/>`).join('')${'}'}
+              </div>
+
+              <!-- 스토리 -->
+              <section class="section-card block story">
+                <h2>스토리</h2>
+                ${'${'}p.summary?`<p style="color:#555">\${p.summary}</p>`:''${'}'}
+                ${'${'}p.keyMessage?`<p style="font-weight:700;color:#E87722">❝ \${p.keyMessage} ❞</p>`:''${'}'}
+                <p>\${formatDescription(p.description)}</p>
+              </section>
+
+              <!-- 우리가 추구하는 가치 (문구 교체) -->
+              <section class="section-card block value">
+                <h2>우리가 추구하는 가치</h2>
+                <p>Project.PAW는 개인 구조자와 후원자가 직접 연결되는 작은 실험입니다.</p>
+                <p>숫자보다 중요한 건 ‘연결된 마음’이고,<br/>그 마음이 행동으로 이어질 수 있도록 돕고 싶습니다.</p>
+                <p><strong>2025.09월</strong>을 시작으로 작은 용기들이 모여 큰 변화가 될 거라 믿습니다. 🐾</p>
+              </section>
+            </div>
+            <!-- 우측 -->
+            <div class="block status">
+              <div class="paw-panel">
+                <h2>진행 현황</h2>
+                <div class="paw-kv">
+                  <div class="k">❤️ 연결된 마음</div>
+                  <div class="v big">\${p.supporterCount??0}명</div>
+                </div>
+                <div class="paw-kv">
+                  <div class="k">현재 모금액</div>
+                  <div class="v">\${fmt(current)}원</div>
+                </div>
+                <div class="paw-kv">
+                  <div class="k">목표 금액</div>
+                  <div class="v">\${fmt(goal)}원</div>
+                </div>
+                ${'${'}p.kakaoChatUrl ? `<a href="\${p.kakaoChatUrl}" target="_blank" class="btn-kakao">💬 후원하러 가기</a>`:''${'}'}
+                <button class="btn-share" id="shareCopy">🔗 공유하기</button>
+                ${'${'}p.adminMessage?`
+                  <div style="margin-top:18px;padding:14px;border-radius:12px;background:#fff8f2;
+                              border:1px solid #f4d0b5;font-weight:800;color:#d35400;font-size:1.05rem;">
+                    📌 관리자 한마디: \${p.adminMessage}
+                  </div>`:''${'}'}
+              </div>
+            </div>
+          </div>
+        `;
+
+        // 공유 복사
+        document.getElementById("shareCopy")?.addEventListener("click",()=>{
+          navigator.clipboard.writeText(window.location.href).then(()=>alert("링크가 복사되었습니다."));
+        });
+
+        // 캐러셀 썸네일 클릭
+        const carouselEl=document.querySelector('#carouselProject');
+        const carousel=new bootstrap.Carousel(carouselEl);
+        document.querySelectorAll('.thumb-strip img').forEach(img=>{
+          img.addEventListener('click',()=>{
+            const idx=parseInt(img.dataset.index,10);
+            carousel.to(idx);
+            document.querySelectorAll('.thumb-strip img').forEach(t=>t.classList.remove('active'));
+            img.classList.add('active');
+          });
+        });
+
+        /* ===== 계좌 팝업 (후원하기 가기 클릭 시) ===== */
+        const ACCOUNT_TEXT='계좌번호 : KB국민 831801-04-173073 프로젝트파우';
+        const DONOR_MSG='보내주신 마음 100% 후원자에게 Direct로 전달됩니다';
+
+        const modal=document.getElementById('pawAccModal');
+        const accEl=modal.querySelector('.paw-acc-num');
+        const copyBtn=modal.querySelector('.paw-copy');
+        const toast=document.getElementById('pawToast');
+
+        function openModal(e){ if(e) e.preventDefault();
+          accEl.textContent=ACCOUNT_TEXT;
+          modal.hidden=false; document.body.style.overflow='hidden';
+        }
+        function closeModal(){ modal.hidden=true; document.body.style.overflow=''; }
+
+        modal.addEventListener('click',(e)=>{
+          if(e.target.classList.contains('paw-modal') || e.target.classList.contains('paw-close')) closeModal();
+        });
+
+        copyBtn.addEventListener('click', async ()=>{
+          try{
+            await navigator.clipboard.writeText(ACCOUNT_TEXT);
+          }catch{
+            const ta=document.createElement('textarea'); ta.value=ACCOUNT_TEXT;
+            document.body.appendChild(ta); ta.select(); document.execCommand('copy'); ta.remove();
+          }
+          toast.hidden=false; setTimeout(()=>toast.hidden=true,1200);
+        });
+
+        const donateBtn=document.querySelector('.btn-kakao');
+        donateBtn?.addEventListener('click', openModal, {passive:false});
+      }catch(e){
+        console.error(e);
+        $detail.innerHTML='<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
       }
     }
-  })();
-
-  /* -------------------------------------
-   * (2) “우리가 추구하는 가치” 문구 교체
-   * ------------------------------------- */
-  (function replaceValuesCopy() {
-    const NEW_HTML = `
-      <p>Project.PAW는 개인 구조자와 후원자가 직접 연결되는 작은 실험입니다.</p>
-      <p>숫자보다 중요한 건 ‘연결된 마음’이고,<br/>그 마음이 행동으로 이어질 수 있도록 돕고 싶습니다.</p>
-      <p><strong>2025.09월</strong>을 시작으로 작은 용기들이 모여 큰 변화가 될 거라 믿습니다. 🐾</p>
-    `;
-    // 제목 탐색(“우리가 추구하는 가치”)
-    const headings = Array.from(document.querySelectorAll('h1,h2,h3,h4,h5'))
-      .filter(h => /우리가\s*추구하는\s*가치/.test(h.textContent.trim()));
-    if (headings.length) {
-      const h = headings[0];
-      const block = h.parentElement; // 보통 같은 컨테이너 안에 문단이 있음
-      // 기존 문단 제거(헤딩은 유지)
-      Array.from(block.querySelectorAll('p')).forEach(p => p.remove());
-      const wrap = document.createElement('div');
-      wrap.innerHTML = NEW_HTML;
-      block.appendChild(wrap);
-    }
-  })();
-
-  /* ---------------------------------------------------
-   * (3) “후원하기 가기” → 계좌번호 팝업 + 복사 기능
-   *     (기존 링크/로직은 막고 팝업만 띄움)
-   * --------------------------------------------------- */
-  const ACCOUNT_TEXT = '계좌번호 : KB국민 831801-04-173073 프로젝트파우';
-  const DONOR_MSG = '보내주신 마음 100% 후원자에게 Direct로 전달됩니다';
-
-  const modal = document.getElementById('pawAccModal');
-  const accEl = modal.querySelector('.paw-acc-num');
-  const copyBtn = modal.querySelector('.paw-copy');
-  const toast = modal.querySelector('.paw-toast');
-  const donorMsgEl = modal.querySelector('.paw-donor-msg');
-
-  function openModal(e) {
-    if (e) e.preventDefault();
-    accEl.textContent = ACCOUNT_TEXT;
-    donorMsgEl.textContent = DONOR_MSG;
-    modal.hidden = false;
-    document.body.style.overflow = 'hidden';
-  }
-  function closeModal() {
-    modal.hidden = true;
-    document.body.style.overflow = '';
-  }
-
-  // 닫기(배경/버튼)
-  modal.addEventListener('click', (e) => {
-    if (e.target.classList.contains('paw-modal') || e.target.classList.contains('paw-close')) {
-      closeModal();
-    }
-  });
-
-  // 복사
-  copyBtn.addEventListener('click', async () => {
-    try {
-      await navigator.clipboard.writeText(ACCOUNT_TEXT);
-      toast.hidden = false;
-      setTimeout(() => (toast.hidden = true), 1400);
-    } catch (_) {
-      // 폴백
-      const ta = document.createElement('textarea');
-      ta.value = ACCOUNT_TEXT;
-      document.body.appendChild(ta);
-      ta.select();
-      document.execCommand('copy');
-      ta.remove();
-      toast.hidden = false;
-      setTimeout(() => (toast.hidden = true), 1400);
-    }
-  });
-
-  // 대상 버튼: id/class가 불명확하므로 텍스트 매칭(안전)
-  const donateTargets = Array.from(document.querySelectorAll('a,button,#donateBtn,#donate,.donate,.donate-btn'))
-    .filter(el => /후원하기\s*가기|후원하기|기부하기/.test(el.textContent.replace(/\s/g,'')));
-
-  donateTargets.forEach(btn => {
-    btn.addEventListener('click', openModal, { passive: false });
-  });
-});
-</script>
-<!-- / Project.PAW 안전 패치 -->
+    render();
+  </script>
+</body>
+</html>
